--- a/src/components/highscore/highscore.module.scss
+++ b/src/components/highscore/highscore.module.scss
@@ -37,12 +37,13 @@
   backdrop-filter: blur(3.2px);
   -webkit-backdrop-filter: blur(3.2px);
   border: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 1vw;
+  padding: 0.75vw;
   display: flex;
   flex-direction: row;
   align-items: center;
   vertical-align: middle;
-  margin-top: 0.5vw;
+  margin-top: 0.25vw;
+  font-size: 1.25vw;
   width: 80%;
 }
 
@@ -58,6 +59,5 @@
 }
 .Score {
   width: 15%;
-  font-size: 28px;
   align-self: flex-end;
 }
