--- a/src/components/multiplayer-game/multiplayer-game.module.scss
+++ b/src/components/multiplayer-game/multiplayer-game.module.scss
@@ -47,3 +47,64 @@
   font-size: 1.25vw;
   width: 80%;
 }
+
+.MultiplayerGameRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.YourTurn {
+  cursor: pointer;
+  padding: 0.75rem;
+  background: #ffdc7f;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0);
+  border-radius: 16px;
+  color: #fff;
+  font-weight: bold;
+  font-family: Jaro;
+  transform: rotate(3deg);
+  font-size: 1.25rem;
+  &:hover {
+    border-color: rgba(255, 255, 255, 1);
+    border: 1px solid;
+  }
+}
+.IconSpinner {
+  -webkit-animation-name: spinner;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 5s;
+  animation-name: spinner;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+/* WebKit and Opera browsers */
+@-webkit-keyframes spinner {
+  from {
+    -webkit-transform: rotateX(0deg);
+  }
+  to {
+    -webkit-transform: rotateX(-360deg);
+  }
+}
+/* all other browsers */
+@keyframes spinner {
+  from {
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+  }
+  to {
+    -moz-transform: rotateX(-360deg);
+    -ms-transform: rotateX(-360deg);
+    transform: rotateX(-360deg);
+  }
+}
